--- a/DiandianIOS/DiandianIOS/DARootView.storyboard
+++ b/DiandianIOS/DiandianIOS/DARootView.storyboard
@@ -13,6 +13,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menubook_bg.png" id="Fhl-Fs-tlf">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
                             <view contentMode="scaleToFill" id="pFM-TM-8Tz" userLabel="content">
                                 <rect key="frame" x="140" y="65" width="876" height="694"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -47,6 +51,9 @@
             <point key="canvasLocation" x="35" y="-964"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="menubook_bg.png" width="2048" height="1536"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="lightContent"/>
         <simulatedOrientationMetrics key="orientation"/>
